test/tests/stages/16_characters_and_strings/invalid_parse/extra_credit/character_const_goto.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  int
  identifier(main)
  (
  void
  )
  {
  goto
  const char('x')
  ;
  const char('x')
  ;
  return
  const int(0)
  ;
  }
